<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_yellow"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/app_name"
        app:titleTextColor="#FFFFFF"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_transparent_default_bdr"
        android:orientation="vertical"
        android:paddingTop="6dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#000000"
            app:counterEnabled="true"
            app:counterMaxLength="27"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:hint="@string/nome"
                android:inputType="textPersonName"
                android:maxLength="27"
                android:textColor="#000000"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/llhFonePack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="6dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColorHint="#000000"
                app:counterEnabled="true"
                app:counterMaxLength="11">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:hint="@string/fone"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColorHint="#000000"
                app:counterEnabled="true"
                app:counterMaxLength="6">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:hint="@string/ramal"
                    android:inputType="phone"
                    android:maxLength="6"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_add_fone"
            android:layout_width="90dp"
            android:layout_height="28dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="6dp"
            android:layout_weight="1"
            android:background="@drawable/button_transparent_theme_border"
            android:text="add fone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/button_transparent_default_bdr"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_data"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:background="@drawable/button_transparent_theme"
                android:text="@string/data"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_hora"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:background="@drawable/button_transparent_theme"
                android:text="@string/hora"
                android:textAlignment="center"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_endereco"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:background="@drawable/button_transparent_theme"
                android:text="@string/endere_o"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_doc_nfe"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:background="@drawable/button_transparent_theme"
                android:text="@string/cpf_ou_cnpj"
                android:textAlignment="center"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_add_produto"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/button_transparent_theme_border"
        android:text="@string/adicionar_produtos"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_lista_produtos"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/button_transparent_theme_border"
        android:text="@string/lista_de_pedidos"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_transparent_theme_border"
            android:text="@string/confirmar"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_sair"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_transparent_theme_border"
            android:text="@string/sair"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>