<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_yellow"
    tools:context=".ClienteActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnPesquisaCliente"
                android:layout_width="250dp"
                android:layout_height="46dp"

                android:layout_marginStart="12dp"
                android:background="@drawable/button_transparent_theme_border"
                android:drawableStart="@android:drawable/ic_search_category_default"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="Pesquisar Cadastro"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llhNomecliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/llhInputNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txviInpNomeCliente"
                    android:layout_width="wrap_content"
                    android:layout_height="46dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="3"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/lbl_cliente"
                    android:textColor="#141313"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/imgBtnPesquisaCliente"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_transparent_theme_border"
                    app:srcCompat="@android:drawable/ic_menu_search" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llhFone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/llhInputFone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="wrap_content"
                    android:layout_height="46dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="3"
                    android:ems="10"
                    android:inputType="phone"
                    android:text="@string/lbl_fone"
                    android:textColor="#141313"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/imgBtnAddFone"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_gravity="center|center_vertical"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_transparent_theme_border"
                    app:srcCompat="@android:drawable/ic_input_add" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llhCPF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/llhInputCPF"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/TxtCPF"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginEnd="10dp"
                    android:ems="10"
                    android:inputType="phone"
                    android:text="@string/lbl_cpf"
                    android:textColor="#141313"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llhEntrega"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_add_produto"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:background="@drawable/button_transparent_theme_border"
                android:text="Local Da Entrega"
                android:textColor="#141313"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>